--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muskaan | Personal</title>
-    <meta name="description" content="Muskaan - CS major at Georgia Tech, builder, and life romanticizer. Explore my journey through code, experiences, and reflections." />
-    <meta name="author" content="Muskaan" />
+    <title>Muskan's Corner</title>
+    <meta name="description" content="Muskan - CS major at Georgia Tech, builder, and life romanticizer. Explore my journey through code, experiences, and reflections." />
+    <meta name="author" content="Muskan" />
 
-    <meta property="og:title" content="Muskaan | Personal" />
+    <meta property="og:title" content="Muskan's Corner | Personal" />
     <meta property="og:description" content="CS major at Georgia Tech, builder, and life romanticizer." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@muskaan" />
+    <meta name="twitter:site" content="@muskan" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
